--- a/TavernaMobile/bin/AndroidManifest.xml
+++ b/TavernaMobile/bin/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="12"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -25,12 +25,17 @@
         android:icon="@drawable/taverna_wheel_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="SplashScreenActivity" >
+        <activity
+            android:name="SplashScreenActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="MainPanelActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="LoginScreenActivity"
@@ -45,7 +50,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:noHistory="true"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustPan" >
+            android:windowSoftInputMode="stateHidden|adjustPan">
         </activity>
         <activity
             android:name="MainActivity"
@@ -69,7 +74,9 @@
             android:name=".io.InputsList"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustPan" /><activity android:name=".io.InputsHistoryActivity"></activity>
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+        <activity android:name=".io.InputsHistoryActivity" >
+        </activity>
         <activity android:name=".io.FilePickerActivity" >
         </activity>
         <activity
@@ -91,7 +98,6 @@
             android:name="cs.man.ac.uk.tavernamobile.dataaccess.RunHistoryHelper"
             android:authorities="@string/authority"
             android:exported="false" />
-        
     </application>
 
 </manifest>
