--- a/TavernaMobile/bin/AndroidManifest.xml
+++ b/TavernaMobile/bin/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="12"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -24,7 +24,7 @@
         android:allowBackup="true"
         android:icon="@drawable/taverna_wheel_logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name="SplashScreenActivity" >
             <intent-filter>
@@ -61,7 +61,8 @@
         <activity
             android:name="SearchResultScreen"
             android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysVisible" />
         <activity
             android:name="WorkflowDetail"
             android:configChanges="orientation|keyboardHidden"
