--- a/TavernaMobile/bin/AndroidManifest.xml
+++ b/TavernaMobile/bin/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <activity
             android:name="MainPanelActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait" 
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
             android:name="LoginScreenActivity"
